# survey_django

./: .env-example  .gitignore  .pylintrc  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
static/css/: styles.css
static/templates/: add_template.html  answer.html  base.html  home.html  login.html  login_user.html  messages.html  questions_list.html  queston_detail.html  register.html  results.html  survey_detail.html  surveys_list.html  surveys_to_pass_list.html
survey_app/: admin.py  crud.py  download.py  forms.py  models.py  questions_views.py  survey_views.py  tests.py  urls.py  view_mixin.py  views.py  views_choices_answers.py  views_menu.py  views_questions.py  views_survey.py
survey_app/migrations/: 0001_initial.py  0002_rename_survey_id_question_survey.py  0003_rename_question_id_answer_question_and_more.py  0004_rename_option_choice.py  0005_alter_answer_id_alter_choice_id_alter_question_id_and_more.py  0006_alter_answer_id_alter_choice_id_alter_question_id_and_more.py  0007_choicesmodel.py  0008_alter_choicesmodel_status.py  0009_remove_choicesmodel_status_choicesmodel_choice.py  0010_alter_choicesmodel_choice.py  0011_alter_choicesmodel_choice.py  0012_alter_choicesmodel_choice.py  0013_alter_choicesmodel_choice.py  0014_votesmodel_delete_choicesmodel.py  0015_delete_votesmodel.py  0016_alter_answer_table_alter_choice_table_and_more.py
survey_app/tests/: conftest.py  test_urls.py  tests.py  utils.py
survey_app/views/: utils.py  views.py  (+4 more)
survey_project/: asgi.py  settings.py  tests.py  urls.py  wsgi.py
(+4 files in other folders)
