[tool.poetry]
name = "survey-django"
version = "0.1.0"
description = ""
authors = ["alina1412 <alina-junior-msk@mail.ru>"]
readme = "README.md"
packages = [{include = "survey_django"}]

[tool.poetry.dependencies]
python = "^3.9"
antlr4-python3-runtime = "4.8"
asgiref = "3.5.1"
async_generator = "1.10"
atomicwrites = "1.4.0"
attrs = "21.4.0"
certifi = "2022.6.15"
cffi = "1.15.1"
charset-normalizer = "2.0.12"
click = "8.1.3"
colorama = "0.4.4"
coverage = "6.4.1"
cryptography = "37.0.2"
dj-database-url = "0.5.0"
Django = "4.0.4"
django-heroku = "0.3.1"
djangorestframework = "3.13.1"
gunicorn = "20.1.0"
h11 = "0.13.0"
idna = "3.3"
iniconfig = "1.1.1"
outcome = "1.2.0"
packaging = "21.3"
pathspec = "0.8.1"
pluggy = "1.0.0"
psycopg2 = "2.9.3"
psycopg2-binary = "2.9.3"
py = "1.11.0"
pycparser = "2.21"
PyMySQL = "1.0.2"
pyOpenSSL = "22.0.0"
pyparsing = "3.0.9"
PySocks = "1.7.1"
pytest = "6.2.5"
pytest-cov = "3.0.0"
pytest-django = "4.5.2"
pytest-pythonpath = "0.7.4"
python-dotenv = "0.20.0"
pytz = "2022.1"
requests = "2.28.0"
sniffio = "1.2.0"
sortedcontainers = "2.4.0"
sqlparse = "0.4.2"
toml = "0.10.2"
tomli = "2.0.1"
trio = "0.21.0"
trio-websocket = "0.9.2"
tzdata = "2022.1"
urllib3 = "1.26.9"
webdriver-manager = "3.7.1"
whitenoise = "6.1.0"
wsproto = "1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
